[package]
name = "gpecs_simple"
description = "Simple example of ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
gpecs = { workspace = true }
gpecs_itertools = { workspace = true }
gpecs_simple_types = { workspace = true }
bytemuck = { workspace = true }
num-traits = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
wgpu = { workspace = true, features = ["spirv"] }
rayon = { workspace = true }

[build-dependencies]
cargo-gpu-install = { workspace = true }
const_format = { workspace = true }

[lints]
workspace = true
