[package]
name = "gpecs_simple"
description = "Simple example of ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
gpecs = { workspace = true }
gpecs_simple_core = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
csv = { workspace = true }
dotenvy = { workspace = true }

[lints]
workspace = true
