[package]
name = "gpecs_simple_core"
description = "Core of the simple example for ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
gpecs = { workspace = true, features = ["rayon"] }
gpecs_itertools = { workspace = true }
gpecs_simple_types = { workspace = true }
bytemuck = { workspace = true }
itertools = { workspace = true }
num-traits = { workspace = true }
glam = { workspace = true }
pollster = { workspace = true }
log = { workspace = true }
wgpu = { workspace = true, features = ["vulkan", "dx12", "metal", "spirv"] }
rayon = { workspace = true }

[build-dependencies]
cargo-gpu-install = { workspace = true }
const_format = { workspace = true }

[lints]
workspace = true
