[package]
name = "gpecs_simple_shader"
description = "SPIR-V shader for simple example of (probably) ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[lib]
crate-type = ["dylib", "lib"]

[dependencies]
gpecs_types = { workspace = true }
gpecs_simple_types = { workspace = true }
spirv-std = { workspace = true }
unroll = { workspace = true }
static_assertions = { workspace = true }

[features]
nightly = []

[lints]
workspace = true
