[package]
name = "gpecs_simple_shader"
description = "SPIR-V shader for simple example of ECS on GPU"
version.workspace = true
license.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
gpecs_entity = { workspace = true }
gpecs_simple_types = { workspace = true }
spirv-std = { workspace = true }
glam = { workspace = true, features = ["usize"] }

[features]
nightly = []

[lints]
workspace = true
